--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,9 +28,9 @@ main {
   --primary-color-lighter: #edebff;
   --primary-color-light: #b2aafb;
   --primary-color-light-rgb: 178, 170, 251;
-  --primary-color: #887bff;
-  --primary-color-rgb: 136, 123, 255;
-  --primary-color-dark: #5442fb;
+  --primary-color: #7255d9;
+  --primary-color-rgb: 114, 85, 217;
+  --primary-color-dark: #593fb7;
 
   --outline-focus-color: #ff8a47;
   --secondary-color: #e8e8e8;
